syntax = "proto3";

package edu.uci.ics.amber.engine.architecture.worker;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
    scope: FILE,
    preserve_unknown_fields: false
    no_default_values_in_constructor: true

};

enum WorkerState {
    UNINITIALIZED = 0;
    READY = 1;
    RUNNING = 2;
    PAUSED = 3;
    COMPLETED = 4;

}

message WorkerStatistics {
    map<int32, int64> input_tuple_count = 1;
    map<int32, int64> output_tuple_count = 2;
    int64 data_processing_time = 3;
    int64 control_processing_time = 4;
    int64 idle_time = 5;
}

message WorkerInfo {
    WorkerState worker_state = 1 [(scalapb.field).no_box = true];
    WorkerStatistics worker_statistics = 2 [(scalapb.field).no_box = true];
}